@@ -1,17 +1,13 @@
 package dev.ua.ikeepcalm.cmds;
 
-import dev.ua.ikeepcalm.mystical.Beyonder;
 import dev.ua.ikeepcalm.LordOfTheMinecraft;
+import dev.ua.ikeepcalm.mystical.Beyonder;
 import dev.ua.ikeepcalm.utils.GeneralPurposeUtil;
 import org.bukkit.Bukkit;
-import org.bukkit.Location;
-import org.bukkit.Material;
-import org.bukkit.block.Block;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
-import org.bukkit.metadata.FixedMetadataValue;
 import org.checkerframework.checker.nullness.qual.NonNull;
 
 public class TestCmd implements CommandExecutor {
@@ -20,15 +16,16 @@ public class TestCmd implements CommandExecutor {
         if (args.length == 0 || !(s instanceof Player p))
             return true;
 
-        if (args[0].equalsIgnoreCase("cauldron"))
-            cauldronCmd(p);
-
         if (args[0].equalsIgnoreCase("characteristic")) {
             p.getInventory().addItem(LordOfTheMinecraft.instance.getCharacteristic().getCharacteristic(GeneralPurposeUtil.parseInt(args[2]), args[1], "§" + args[3]));
         }
 
         if (args[0].equalsIgnoreCase("recipe")) {
-            p.getInventory().addItem(LordOfTheMinecraft.instance.getRecipe().getRecipeForSequence(LordOfTheMinecraft.instance.getPotions().get(0), GeneralPurposeUtil.parseInt(args[1])));
+            p.getInventory().addItem(LordOfTheMinecraft.instance.getRecipe().getRecipeForSequence(LordOfTheMinecraft.instance.getPotions().getFirst(), GeneralPurposeUtil.parseInt(args[1])));
+        }
+
+        if (args[0].equalsIgnoreCase("potion")) {
+            p.getInventory().addItem(LordOfTheMinecraft.instance.getPotions().getFirst().returnPotionForSequence(GeneralPurposeUtil.parseInt(args[1])));
         }
 
         if (args[0].equalsIgnoreCase("instances")) {
@@ -37,16 +34,10 @@ public class TestCmd implements CommandExecutor {
 
         if (args[0].equalsIgnoreCase("acting")) {
             Beyonder beyonder = LordOfTheMinecraft.beyonders.get(p.getUniqueId());
-            beyonder.setActing(Integer.parseInt(args[1]));
+            p.sendMessage(beyonder.getActingProgress() + " / " + beyonder.getActingNeeded());
         }
 
         return true;
     }
 
-    private void cauldronCmd(Player p) {
-        Location loc = p.getLocation();
-        Block block = loc.getBlock();
-        block.setType(Material.CAULDRON);
-        block.setMetadata("special", new FixedMetadataValue(LordOfTheMinecraft.instance, true));
-    }
 }
